--- a/index.html
+++ b/index.html
@@ -12,8 +12,30 @@
 </head>
 
 <body>
-    <h1>hello from bootsrap</h1>
+    <header>
+        <h1 class="text-center mt-4">Welcome to the JSON API. MealDB</h1>
+        <h2 class="text-center mt-4">Search Your Favourite Food</h2>
 
+    </header>
+    <main class="container">
+        <!-- seacrh input field  -->
+        <div class="input-group mb-3 w-50 mx-auto mt-5">
+            <input id="search-field" type="text" class="form-control p-2"
+                placeholder="Search Your Favourite Recipie (ex : pasta, rice , fish)" aria-label="Recipient's username"
+                aria-describedby="button-addon2">
+            <button onclick="searchFood()" class="btn btn-outline-secondary" type="button"
+                id="meal-serch">Search</button>
+        </div>
+        <!-- meals deatils container  -->
+        <div id="meal-details" class=" w-50 mx-auto mb-2">
+
+        </div>
+
+        <!-- serch food container -->
+        <div id="meal-container" class="row row-cols-1 row-cols-md-3 g-4 ">
+
+        </div>
+    </main>
     <!-- bootsrap js bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
